2002-11-30  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/Postscript-PreFilter.xml: Added choice to the
	  "PreFilter" option of the "PostScript" driver which lets
	  GhostScript only embed fonts and not convert to another
	  PostScript level.
	
	* db/source/printer/HP-LaserJet_1000.xml: Added instructions
	  for uploading the firmware onto the HP LaserJet 1000.

2002-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: Added HP DesignJet 250C, 430, 450C,
	  455CA, 488CA, 700, 2500CP, Epson MJ 930C.

	* db/source/printer/*.xml: Text updates for the HP DesignJet 230,
	  750C, and 3500CP.

2002-11-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/Epson-Stylus_CX*.xml: Added Epson Stylus CX5200,
	  updated text and rating for Epson Stylus CX3200.

	* db/source/printer/HP-LaserJet_4?00.xml: Added HP LaserJet 4200
	  and 4300.

	* db/source/driver/pxlmono.xml, db/source/driver/Postscript.xml,
	  db/source/opt/160.xml: Added HP LaserJet 4200 and 4300 to the
	  appropriate driver entries.

2002-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printers/Generic-*.xml: Added an assortment of generic
	  PostScript, PCL, dot matrix, and GDI printers. So users can more
	  easily set up unlisted printers.

	* db/source/drivers/*.xml, db/source/opt/*.xml: Added entries for
	  the generic printers to the driver and option files.

2002-11-07  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/lxm3200-tweaked.xml,
	  db/source/opt/lxm3200-tweaked-Z31Margin.xml: Added margin
	  adjustment for the Lexmark Z31, see
	  https://sourceforge.net/tracker/?func=detail&atid=218073&aid=634091&group_id=18073

	* db/source/driver/lpstyl.xml: Inserted new URL for the "lpstyl"
	  driver.
	
2002-11-06  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*: Recommended driver "hpijs" and "Perfectly"
	  for HP Color LaserJet 5 and 5000.

2002-11-02  Till Kamppeter <till.kamppeter@gmx.net>
