@@ -1,0 +1,53 @@
+<printer id="printer/HP-DeskJet_3325">
+  <make>HP</make>
+  <model>DeskJet 3325</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+        1 colour (CMY) cartridge and optionally 1 black (K)
+        cartridge
+        </en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://h20022.www2.hp.com/busprod/overview/0,12512,series=75034^type=18972^category=64173,00.html?lsidebarLayId=79&amp;rsidebarLayId=63</url>
+  <lang>
+    <proprietary /><!--no pjl-->
+  </lang>
+  <autodetect>
+    <!--no known parport probe information-->
+  </autodetect>
+  <functionality>B</functionality>
+  <!--no "contrib_url"-->
+  <driver>hpijs</driver>
+  <comments>
+    <en>
+
+    Very cheap entry level model, similar to the HP DeskJet
+    3320.&lt;p&gt;
+
+    Super cheapo printer (51 Euros in Italy), comes with only the color
+    (CMY) cartrdge (black cartridge optional), very small cartridges
+    (10 ml black, 8 ml color smaller than the cartridges of the
+    portable DeskJet 450).&lt;p&gt;
+
+    Does not understand PCL as most other DeskJets, it uses the
+    so-called &quot;Lightweight Imaging Device Interface
+    Language&quot; (LIDIL), these printers are supported by the
+    &quot;hpijs&quot; driver beginning from version 1.3. The driver
+    supports resolutions only up to 600 dpi, head alignment settings
+    stored in the printer are not made use of, so use a one-cartridge
+    (CMY) printing mode in case of mis-alignments.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
