@@ -8,6 +8,8 @@
 	* db/source/printer/HP-LaserJet_1000.xml: Added instructions
 	  for uploading the firmware onto the HP LaserJet 1000.
 
+	* db/source/printer/HP-DeskJet_3325.xml: Added HP DeskJet 3325.
+	
 2002-11-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/*.xml: Added HP DesignJet 250C, 430, 450C,
